--- a/examples/basics/package.json
+++ b/examples/basics/package.json
@@ -11,6 +11,6 @@
 	},
 	"devDependencies": {
 		"astro": "^1.0.6",
-		"astro-cssbundle": "workspace:*"
+		"@ernest/astro-cssbundle": "workspace:*"
 	}
 }
