fix(deps): update package name

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@ernest/astro-cssbundle",
+	"name": "@ernxst/astro-cssbundle",
 	"version": "0.0.1",
 	"type": "module",
 	"exports": {
