--- a/examples/blog/package.json
+++ b/examples/blog/package.json
@@ -13,7 +13,7 @@
 		"@astrojs/mdx": "^0.10.0",
 		"@astrojs/rss": "^1.0.0",
 		"@astrojs/sitemap": "^1.0.0",
-		"@ernest/astro-cssbundle": "workspace:*",
+		"@ernxst/astro-cssbundle": "workspace:*",
 		"astro": "^1.0.6",
 		"rollup": "^2.78.1"
 	}
