chore: add uncommitted files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,30 +4,14 @@
 	},
 	"editor.tabSize": 2,
 	"cSpell.words": [
-		"antfu",
 		"astro",
 		"commitlint",
-		"demi",
 		"esbuild",
-		"galaxia",
-		"iconify",
-		"intlify",
-		"nanostores",
-		"pinia",
 		"pnpm",
-		"supsertruct",
-		"svelte",
-		"tauri",
 		"tsup",
 		"typecheck",
-		"unocss",
-		"unplugin",
 		"Vite",
-		"vitejs",
-		"Vitesse",
-		"vitest",
-		"webp",
-		"xstate"
+		"vitejs"
 	],
 	"editor.formatOnSave": false,
 	"files.associations": {
