--- a/.prettierignore
+++ b/.prettierignore
@@ -1,11 +1,17 @@
 # Directories
 node_modules
+.github
+.changeset
 .turbo
-.idea
 **/dist
 **/coverage
+**/public
+**/.vscode
 
 # Files
+# Ignore CHANGELOG.md files to avoid issues with automated release job
+CHANGELOG.md
+CONTRIBUTING.md
 README.md
 LICENSE
 pnpm-lock.yaml
